--- a/estilos.css
+++ b/estilos.css
@@ -71,7 +71,7 @@ main{
     display: flex;    
     justify-content: center; 
     background: #ffffff;
-    padding: 10px;
+    padding: 8px;
         
 }
 
@@ -87,7 +87,19 @@ main{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 10px;
+    padding: 8px;
+}
+
+.span-principalseccionuno{
+    height: 20px;
+    width: 200px;     
+    border-radius: nullpx;
+    font-family: Roboto;
+    font-size: 15px;      
+    text-align: left;
+    font-weight: bold;
+    color: #000000;
+
 }
 
 .div-flexHeader{
