--- a/estilos.css
+++ b/estilos.css
@@ -21,6 +21,21 @@ header{
     background:#FFF159;
 }
 
+.div-flexHeader{
+    display: flex;
+    justify-content: space-between; 
+    width: 1512px; 
+    height: 100px; 
+}
+.fuenteheader{
+    font-family: Roboto;
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0em;
+    text-align: center;
+}
+
 main{
     width: 1512;
     height: 3586;
@@ -67,21 +82,21 @@ main{
     height: 340px;
 }
 
-.div-flexseccionuno{ 
-    display: flex;    
-    justify-content: center; 
-    background: #ffffff;
-    padding: 8px;
-        
-}
-
 .div-seccionuno{    
     display: flex;
     justify-content:center; 
     width: 1512px;
     height: 90px;
-    margin-top: 20px;    
+    margin-top: 30px;    
 }
+
+.div-flexseccionuno{ 
+    display: flex;    
+    justify-content: center; 
+    background: #ffffff;
+    padding: 8px;        
+}
+
 
 .div-verticalseccionuno{
     display: flex;
@@ -115,12 +130,27 @@ main{
     color: #3483FA
 }
 
-.div-flexHeader{
+.div-secciondos{    
     display: flex;
-    justify-content: space-evenly; 
-    width: 1512px; 
-    height: 100px; 
+    flex-direction: column;    
+    justify-content: center;
+    width: 1512px;
+    height: 415px;
+    margin-top: 20px;    
 }
+
+.div-flexsecciondos{
+    display: flex;
+    justify-content: center;    
+    width: 1512px; 
+    margin-top: 15px;     
+}
+
+.div-margenofertas{
+     margin: 8px;
+}
+
+
 .div-justifycolumn{
     display: flex;
     flex-direction: column;    
@@ -159,14 +189,7 @@ main{
     border: none;
 }
 
-.fuenteheader{
-    font-family: Roboto;
-    font-size: 13px;
-    font-weight: 400;
-    line-height: 22px;
-    letter-spacing: 0em;
-    text-align: center;
-}
+
 
 
 
