--- a/estilos.css
+++ b/estilos.css
@@ -149,6 +149,90 @@ main{
 .div-margenofertas{
      margin: 8px;
 }
+.div-justifyrowofertas{
+    display: flex;   
+    flex-direction: row;  
+    gap: 20px;
+    margin-left: 165px;    
+    
+}
+
+.fuente-ofertas{
+    height: 32px;
+    width: 82px;
+    left: 8px;
+    font-family: Roboto;
+    font-size: 25px;
+    font-weight: 300;
+    line-height: 31px;
+    letter-spacing: 0em;
+    text-align: left;        
+    color:#666666;
+}
+
+.fuente-vertodas{
+    height: 20px;
+    width: 64px;
+    left: 106.375px;
+    top: 10px;
+    border-radius: nullpx;
+    font-family: Roboto;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 19px;
+    letter-spacing: 0em;
+    text-align: left;
+    color:#3483FA;
+
+}
+
+.span-valorpesos{
+    height: 24px;
+    width: 84px;
+    left: 19.03125px;
+    border-radius: nullpx;
+    font-family: Roboto;
+    font-size: 23px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0em;
+    text-align: left;
+    color:#333333;
+}
+
+.span-valordescuento{
+    color: #00A650;
+    height: 16px;
+    width: 55px;
+    left: 114.3125px;
+    top: 4px;    
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 16px;    
+    text-align: left;
+    
+}
+
+.span-enviogratis{
+    height: 20px;
+    width: 73.18437194824219px;
+    top: 29px;    
+    font-family: Roboto;
+    font-size: 13px;
+    font-weight: 600;
+    line-height: 16px;    
+    text-align: left;
+    color:#00A650;
+}
+
+.div-infoprecio{
+    width: 224px;
+    height: 120px;
+    background: #ffffff;
+    padding: 13px;
+}
+
 
 
 .div-justifycolumn{
@@ -161,6 +245,14 @@ main{
     flex-direction: row;     
     gap: 17.8px;  
 }
+
+.div-flexrow{
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+}
+
+
 .div-elementoabajo{  
     display: flex; 
     flex-direction: column;         
