iniciando configuración sección tres

--- a/estilos.css
+++ b/estilos.css
@@ -252,6 +252,24 @@ main{
     justify-content: start;
 }
 
+.div-secciontres{    
+    display: flex;
+    flex-direction: column;    
+    align-items: start;
+    width: 1180px;
+    height: 340px;
+    margin-top: 30px;    
+}
+
+.div-flexsecciontres{
+    display: flex;
+    justify-content: center;    
+    width: 1180px; 
+    height: 87px;
+    background: #A90F90;
+         
+}
+
 
 .div-elementoabajo{  
     display: flex; 
@@ -261,10 +279,6 @@ main{
     padding: 10px;
 }
 
-.div-morado{
-    background:#A90F90;
-    
-}
 .input-text{     
     height: 39px;
     width: 598px;
