--- a/estilos2.css
+++ b/estilos2.css
@@ -10,30 +10,22 @@
 }
 
 body{
-    max-width: 1512px;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background: #EBEBEB;
-    overflow: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    
-    
+    ;
 }
 header{    
     height: 100px;
-    max-width: 1512px;        
+    width: 1512px;        
     background:#FFF159;
-    
 }
 
 .div-flexHeader{
     display: flex;
-    justify-content: center;     
+    justify-content: space-between; 
     width: 1512px; 
     height: 100px; 
-    gap: 30px;
-    
 }
 .fuenteheader{
     font-family: Roboto;
@@ -45,17 +37,28 @@ header{
 }
 
 main{
-    max-width: 1512px;
-    height: 3586px; 
-    display: flex;   
-    flex-direction: column;
-    align-items: center;
-    
+    width: 1512;
+    height: 3586;
 }
 
 .fondo-blanco{
     background: #ffffff;
 }
+
+.fondoLego{
+    background-image: url('media/fondos/fondoLego.png'); width: 218px; height: 95px;
+}
+.fondoXiaomi{
+    background-image: url('media/fondos/fondoXiaomi.png'); width: 218px; height: 95px;
+}
+.fondoOster{
+    background-image: url('media/fondos/fondoOster.png'); width: 218px; height: 95px;
+}
+
+.fondoNikon{
+    background-image: url('media/fondos/fondoNikon.png'); width: 218px; height: 95px;
+}
+
 
 
 .fondo-blancoCentrarVertical{
@@ -75,7 +78,7 @@ main{
 .div-fleximagen{
     display: flex;
     justify-content: center; 
-    max-width: 1512px;
+    width: 1512px;
     height: 340px;
 }
 
@@ -84,7 +87,7 @@ main{
 .div-seccionuno{    
     display: flex;
     justify-content:center; 
-    max-width: 1184px;
+    width: 1512px;
     height: 90px;
     margin-top: 30px;    
 }
@@ -135,7 +138,7 @@ main{
     display: flex;
     flex-direction: column;    
     justify-content: center;
-    max-width: 1184px;
+    width: 1512px;
     height: 415px;
     margin-top: 20px;    
 }
@@ -143,7 +146,7 @@ main{
 .div-flexsecciondos{
     display: flex;
     justify-content: center;    
-    width: 1184px; 
+    width: 1512px; 
     margin-top: 15px;     
 }
 
@@ -260,7 +263,7 @@ main{
     display: flex; 
     flex-direction: column;      
     justify-content: space-around;
-    width: 1184px;
+    width: 1512px;
     height: 350px;
     margin-top: 30px;     
     background: #EBEBEB;
@@ -270,7 +273,7 @@ main{
     display: flex;
     justify-content: space-between; 
     padding-top: 15px;   
-    width: 1184px; 
+    width: 1180px; 
     height: 87px;
     padding: 15px;
     background: #A90F90;
@@ -319,7 +322,7 @@ main{
 .div-secciontrescentral{
     display: flex;  
     flex-direction: column;   
-    width: 1184px;
+    width: 1180px;
     height: 172px;
     background: #ffffff;    
 }
@@ -335,7 +338,7 @@ main{
 .div-seccioncentralinferior{
     display: flex;
     justify-content: space-around;
-    width: 1184px;
+    width: 1132px;
     height: 74px;
     margin-top: 5px;
                  
@@ -366,7 +369,7 @@ main{
 
 .div-secciontresinferior{
     padding: 20px;
-    width: 1184px;
+    width: 1180px;
     height: 81px;
     background: #ffffff;
     display: flex;
@@ -399,291 +402,66 @@ main{
 /* Sección 04*/
 
 .div-seccioncuatro{ 
-    margin-top: 20px;   
+    margin-top: 30px;   
     display: flex;  
     flex-direction: column;        
-    justify-content:center;
-    width: 1184px;
-    height: 399px;         
+    justify-content:space-around;
+    width: 1512px;
+    height: 350px;     
     background: #EBEBEB;
     
-}
-
-.imagen-seccioncuatro{
-    width: 384px;
-    height: 250px;
-    margin: 4px;
 }
 
 .div-justifybeneficios{
     display: flex;   
     flex-direction: row;
-    align-items: center;
+    justify-content: start;
     gap: 20px;
-    margin-left: 10px;  
-    margin-bottom: 20px;  
+    margin-left: 10px;    
     
 }
 
 /* Sección 05*/
 
-.div-seccioncinco{     
+.div-seccioncinco{ 
+    margin-top: 25px;   
     display: flex;  
     flex-direction: column;        
-    justify-content:center;
-    width: 1184px;
+    justify-content:space-around;
+    width: 1512px;
     height: 350px;    
 }
 
-
 /*sección 06*/
-
-.div-seccionseisgeneral{  
-   
-    width: 1184px;
-    margin-top: 50px;  
-} 
 
 .div-seccionseis{    
         display: flex;
-        justify-content:space-between; 
-        width: 1184px;          
+        justify-content: center; 
+        width: 1512px;
+        margin-top: 30px;  
 } 
 
-.div-productoseccionseis{
-    width: 284px;
-    height: 340px;
-    margin-top: 15px;
-}
 .div-margenseccionseis{
     display: flex;
-    
+    justify-content: start;
 }
-
-.div-nombrelogo{
-    margin-top: 50px;
-    display: flex;
-    justify-content: center;
-    text-align: center;   
-    
-}
-
-.div-productoslogo{
-    display: flex;
-    justify-content: center;
-    margin: 16px;
-    gap: 4px;
-    
-}
-
-.div-posicionabsoluta{
-    position: absolute;
-    left: 90px;
-    top: 40px;    
-    
-}
-
-.div-vertienda{
-    display: flex;
-    justify-content: center;
-    margin-top: 25px;
-}
-
-
-.fondoLego{
-    background-image: url('media/fondos/fondoLego.png'); width: 284px; height: 95px ;
-}
-.fondoXiaomi{
-    background-image: url('media/fondos/fondoXiaomi.png'); width: 284px; height: 95px;
-}
-.fondoOster{
-    background-image: url('media/fondos/fondoOster.png'); width: 284px; height: 95px;
-}
-
-.fondoNikon{
-    background-image: url('media/fondos/fondoNikon.png'); width: 284px; height: 95px;
-}
-
 
 /*sección siete*/
 
 .div-seccionsiete{     
-    width: 1184px;
-    height: 382px;
-    margin-top: 50px;    
-    margin-bottom: 40px;
+    width: 1512px;
+    margin-top: 50px;  
 } 
 
-.div-flexseccionsiete{
-    display: flex;
-    justify-content: center;
-    margin-top: 15px;
-}
-
-.div-izquierdoseccionsiete{
-    width: 383px;
-    height: 384px;    
-    border-radius: 4px;
-    display: flex;
-    flex-direction: column;    
-    margin-right: 15px;    
-}
-
-.div-gridseccionsiete{
-    width: 800px;
-    height: 400px;
-    display: grid;
-    grid-template-columns: 25% 25% 25% 25%;
-    grid-template-rows: 50% 50%;  
-    grid-column-gap: 6px;    
-    
-}
-
-.div-supermercado{
-    width: 383px;
-    height: 100px;  
-    background-color: #FFFFFF;  
-}
-
-.imagen-gridseccionsiete{
-    height: 184px;
-    width: 184px;    
-    border-radius: 4px;
-    
-}
-
-.imagen-supermecadoseccionsiete{
-    width: 383px;
-    height: 281px;   
-    
-}
-
-
-
 /*sección ocho*/
-
-.div-generalseccionocho{
-    display: flex;
-    flex-direction: column;
-    margin-top: 45px;
-}
-
-.div-gridseccionocho{
-    width: 1200px;
-    height: 340px;     
-    background: #EBEBEB;      
-    display: grid;  
-    grid-template-columns: 14% 14% 14% 14% 14% 14% 14% ;
-    grid-template-rows: 100%;    
-    margin-top: 15px;
-    grid-column-gap: 3px;
-
-}
-
-.div-doblecategoria{
-    display: flex;
-    flex-direction: column;  
-    gap: 3px;
-
-}
-
-.div-iconocategorias{
-    width: 170px;
-    height: 170px;
-    display: flex;
-    flex-direction: column; 
-    justify-content: center;
-    align-items: center;
-    text-align: center;    
-    background-color: #ffffff; 
-    padding: 10px;
-    gap:10px;
-    
-      
-}
-
-.imagen-tamaño{
-    width: 48px;
-    height: 48px;
-}
 
 
 
 /*seccion nueve*/
 
-.div-generalseccionnueve{
-    width: 1512px;
-    height: 300px;
-    margin-top: 20px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;    
-    text-align: center;
-    background-color: #ffffff;
-}
-
-.div-interiorseccionnueve{
-    width: 400px;
-    height: 260px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;    
-    text-align: center;
-    gap: 8px;
-    padding: 60px;
-}
-
-.imagen-interior{
-    width: 66px;
-    height: 46px;
-}
 
 
-
-/*footer*/
-
-footer{
-    width: 1512px;
-    height: 156px;    
-    background-color: #FFFFFF;
-}
-
-.div-generalfooter{  
-    width: 1512px;
-    height: 156px;  
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-}
-
-.div-generaltextos{
-    width: 1180px;
-    height: 54px;
-    display: flex;
-    flex-direction: column;   
-    gap: 5px; 
-    margin-bottom: 10px;
-}
-
-.div-logos{
-    width: 1180px;
-    height: 54px;
-    display: flex;
-    justify-content:start;
-    gap: 25px;
-    margin-top: 35px;
-}
-
-.div-listas{
-    display: flex;
-    flex-direction: row;
-    gap: 20px;
-}
-
+/*seccion diez*/    
 
 
 .div-elementoabajo{  
@@ -701,13 +479,6 @@ footer{
     top: 8px;
     border-radius: 2px;   
 }
-
-button{
-    height: 39px;  
-    width: 46px;  
-    top: 8px;
-}
-
 .div-standarmedida{    
     width: 1184px ;
 }
